# codes

./: .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODES-compile-instructions.sh  CONTRIBUTORS.md  COPYRIGHT  GETTING_STARTED  INSTALL  LICENSE  LICENSE.md  Make.rules  Makefile.am  README-vis.md  README.md  README.txt  RELEASE_NOTES  TODO.txt  codecov.yml  codes-vis-readme.md  codes_config.h.cmake.in  codes_config.h.in  configure.ac  prepare.sh  reformat.sh  ryml_all.hpp  uc-codes.cfg
doc/: .README.dragonfly.txt.swp  .gitignore  BUILD_STEPS  CMakeLists.txt  Doxyfile  GETTING_STARTED  Makefile  Makefile.subdir  README.dragonfly.txt  RELEASE_NOTES  acmsmall.cls  codes-best-practices.tex  codes-vis-readme.md  model-stats-binary-format.md
doc/dev/: RELEASE-CHECKLIST.txt  ci.md  conventions.md  yaml-config.md
doc/example/: CMakeLists.txt  Makefile  example.c  example.conf  example.yaml  flow-control-simplep2p-bw.conf  flow-control-simplep2p-latency.conf  flow-control-simplep2p.conf.in  fluid-flow-director.conf.in  fluid-flow-wan-hybrid-workflow.md  fluid-flow-wan-random-traffic.yaml.in  fluid-flow-wan-topology.yaml  fluid-flow-wan-trace-traffic.csv  fluid-flow-wan-trace-traffic.md  fluid-flow-wan-trace-traffic.yaml.in  fluid-flow-wan.conf.in  fluid-flow-wan.yaml.in  fluid-switch-topology.yaml  fluid-switch.conf.in  kb.dfdally-72-event-time-director.conf.in  kb.dfdally-72-event-time-director.yaml.in  kb.dfdally-72-milc-small.alloc.conf  kb.dfdally-72-milc-small.json  kb.dfdally-72-milc-small.workload.conf.in  kb.dfdally-72-milc.template.json.in  kb.dfdally-72-zeromq-director.conf.in  kb.dfdally-72-zeromq-director.yaml.in  tutorial-ping-pong-surrogate.conf  tutorial-ping-pong-surrogate.conf.in  tutorial-ping-pong-surrogate.yaml.in  tutorial-ping-pong.conf  tutorial-ping-pong.conf.in  tutorial-ping-pong.yaml.in  tutorial-synthetic-ping-pong-surrogate.c  tutorial-synthetic-ping-pong.c  tutorial-synthetic-uniform.c
doc/example_heterogeneous/: Makefile  README  example.c  example.conf  example.yaml  example_torus.conf  example_torus.yaml
doc/refactor-plan/: new-config-format.md  refactor-roadmap.md
doc/workload/: example.kernel.txt  meta.txt  union_online_workload.txt
src/: CMakeLists.txt  Makefile.subdir
src/cortex/: README  dfly_bcast.cpp  dragonfly-cortex-impl.c  dragonfly-cortex-test.c
src/iokernellang/: CodesIOKernelContext.h  CodesIOKernelParser.h  CodesIOKernelTypes.h  CodesKernelHelpers.c  CodesKernelHelpers.h  codesImpl.c  codeslexer.c  codeslexer.h  codeslexer.l  codesparser.c  codesparser.h  codesparser.y  codesparser.y.in
src/logging/: codeslogging.c  timeline.c
src/modelconfig/: README.txt  config_compiler.cxx  config_compiler.h  config_emitter.cxx  config_emitter.h  configfile.c  configfile.h  configglue.c  configglue.h  configlex.c  configlex.h  configlex.l  configparser.c  configparser.h  configparser.y  configstore.c  configstore.h  configstoreadapter.c  configstoreadapter.h  configuration.c  txt_configfile.c  txt_configfile.h  unit_convert.cxx  unit_convert.h  yaml_configfile.cxx  yaml_configfile.h
src/models/: Makefile.subdir
src/network-workload/: README  codes-dumpi-trace-nw-wrkld.c  codes-nw-test.c  codes-nw-workload-method.h  codes-nw-workload.c  codes-scala-trace-nw-wrkld.c  offsets  scala-trace-data
src/network-workloads/: .model-net-synthetic-fattree.c.swp  README_synthetic.txt  README_synthetic_slimfly.txt  README_traces.txt  generate-fluid-flow-wan-topology.py  generate-fluid-switch-topology.py  model-net-dumpi-traces-dump.c  model-net-flow-control-simplep2p.cxx  model-net-fluid-flow-wan.cxx  model-net-fluid-switch.cxx  model-net-mpi-replay-main.c  model-net-mpi-replay.c  model-net-mpi-wrklds.c  model-net-synthetic-all.c  model-net-synthetic-custom-dfly.c  model-net-synthetic-dally-dfly.c  model-net-synthetic-dfly-plus.c  model-net-synthetic-dragonfly-all.c  model-net-synthetic-fattree.c  model-net-synthetic-slimfly.c  model-net-synthetic.c  workloads.conf
src/networks/: topology-test.c
src/surrogate/: application-surrogate.c  director-client.C  director-client.cxx  init.c  network-surrogate.c  requirements.txt  switch.c
src/util/: README.codes-mapping.txt  README.lp-io.txt  codes-callbacks.c  codes-callbacks.h  codes-comm.c  codes-jobmap-method-impl.h  codes-jobmap.c  codes-mapping-context.c  codes-workload-config.cxx  codes_mapping.c  configuration.c  congestion-controller.C  congestion-controller.cxx  connection-manager.C  dotconf.c  interval-merge-tree.c  interval-merge-tree.h  local-storage-model.c  lookup3.c  lookup3.h  lookup8.c  lookup8.h  lp-io.c  lp-msg.c  lp-type-lookup.c  network-manager.C  quickhash.h  rc-stack.c  red-black-tree.c  red-black-tree.h  resource-lp.c  resource.c  surrogate.c  tools.c
src/workload/: README.codes-workload  TODO.codes-workload  codes-bgp-io-wrkld.c  codes-conc-addon.c  codes-darshan-io-wrkld.c  codes-recorder-io-wrkld.c  codes-workload-dump.c  codes-workload.c  (+2 more)
tests/: CMakeLists.txt  Makefile.subdir  README.md  README_MN_TEST.txt  codes-config-compiler-test.cxx  codes-config-workload-test.cxx  codes-unit-convert-test.cxx  codes-unit-smoke.cxx  codes-workload-test.c  concurrent-msg-recv.c  config-compiler-test-util.h  config-tree-equivalence-test.c  download-traces.sh  equivalence-run.sh  example-ping-pong-determinism.sh  example-ping-pong-model-stats-modes.sh  example-ping-pong-model-stats.sh  example-ping-pong-no-logging.sh  example-ping-pong-surrogate-1.sh  example-ping-pong-surrogate-2.sh  example-ping-pong-surrogate-3.sh  example-ping-pong-surrogate-determinism-1.sh  example-ping-pong-surrogate-determinism-2.sh  fluid-flow-wan-ci.sh  fluid-flow-wan-equivalence.sh  fluid-flow-wan-random-traffic-ci.sh  fluid-flow-wan-random-traffic-equivalence.sh  fluid-flow-wan-trace-traffic-ci.sh  fluid-flow-wan-trace-traffic-equivalence.sh  jobmap-test.c  jobmap-test.sh  local-storage-model-test.c  lp-io-test.c  lp-io-test.sh  lsm-test.sh  map-ctx-test.c  map-ctx-test.sh  mapping_test.c  mapping_test.sh  modelnet-p2p-bw-loggp.conf  (+60 more)
(+536 files in other folders)
